; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_object_info.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu.c_dmu_object_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dmu_object_info(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @FTAG, align 4
  %13 = call i32 @dnode_hold(i32* %10, i32 %11, i32 %12, i32** %8)
  store i32 %13, i32* %9, align 4
  %14 = load i32, i32* %9, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  store i32 %17, i32* %4, align 4
  br label %29

18:                                               ; preds = %3
  %19 = load i32*, i32** %7, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i32*, i32** %8, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @dmu_object_info_from_dnode(i32* %22, i32* %23)
  br label %25

25:                                               ; preds = %21, %18
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* @FTAG, align 4
  %28 = call i32 @dnode_rele(i32* %26, i32 %27)
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %25, %16
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @dnode_hold(i32*, i32, i32, i32**) #1

declare dso_local i32 @dmu_object_info_from_dnode(i32*, i32*) #1

declare dso_local i32 @dnode_rele(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
